Bug 587508: Workaround: Invalidate parts of the plugin area that might have content drawn to them. r=roc a=blocking-beta7